💄 Fix z-index between karaline buttons and autocomplete options

--- a/kmfrontend/src/frontend/components/generic/Autocomplete.scss
+++ b/kmfrontend/src/frontend/components/generic/Autocomplete.scss
@@ -43,7 +43,7 @@ $option-active-background: #00b0ed;
 }
 .UI-autocomplete-options {
 	position: fixed;
-	z-index: 21;
+	z-index: 22;
 	list-style-type: none;
 	padding: 0.25em;
 	margin: 0;
